small fixes to SMT lab

--- a/hw3-smt/SMT.ipynb
+++ b/hw3-smt/SMT.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "The purpose of this session is to get familiar with the ways problems can be modelled and solved using SMT solvers. We will use the Python APIs of the Z3 (or cvc5) SMT solver(s) to model and solve problems, and we will also look at the SMT-LIB interface.\n",
+    "The purpose of this session is to get familiar with the ways problems can be modelled and solved using SMT solvers. We will use the Python APIs of the Z3 SMT solver(s) to model and solve problems, and we will also look at the SMT-LIB interface.\n",
     "\n",
     "The first part of the notebook contains a brief overview of the Python SMT API with a lot of example code given. You will have to solve exercise with less and less help as you proceed. Look for *TODO*s in the code: you have to complete the solution at those points. If you have any technical questions or problems concerning the APIs, check the documentations and tutorials referenced at the end of this notebook. If you have any questions concerning the exercises, feel free to ask the tutors via Teams or email."
    ]
@@ -26,7 +26,7 @@
    "metadata": {
     "id": "qDnmzIHuvnpW"
    },
-   "source": "## Install Z3 (or cvc5 if your prefer)"
+   "source": "## Install Z3"
   },
   {
    "cell_type": "code",
@@ -34,10 +34,7 @@
    "metadata": {
     "id": "NU8SifBatir0"
    },
-   "source": [
-    "!pip install z3-solver\n",
-    "# !pip install cvc5"
-   ],
+   "source": "!pip install z3-solver",
    "outputs": [],
    "execution_count": null
   },
@@ -51,19 +48,22 @@
     "\n",
     "### Required Imports\n",
     "\n",
-    "For basic modelling, the Python APIs of Z3 and cvc5 are interchangeable, you can choose whichever you prefer. The required imports for Z3 and cvc5 are, respectively:"
+    "The required import for Z3 is:"
    ]
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "from z3 import *\n",
-    "# from cvc5.pythonic import *"
-   ],
+   "source": "from z3 import *",
    "id": "5fb6f09c294bbf96",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "There is a bunch of SMT solvers with different advantages and disadvantages. Some of them also have a Python API which are even interchangeable with the Z3 API in some cases (e.g., the [cvc5 Python API](https://cvc5.github.io/docs/cvc5-1.1.2/api/python/python.html)). You may try other solvers if you like, but we will stick to Z3 in this session as one of the most widely used and stable SMT solvers.",
+   "id": "c3dee52630ff5fa3"
   },
   {
    "cell_type": "markdown",
@@ -249,7 +249,7 @@
    "source": [
     "**Exercise:** Invert the following real-valued matrix:\n",
     "$$\n",
-    "A = \\begin{pmatrix} 2 & 1 \\\\ 1 & 2 \\end{pmatrix}\n",
+    "A = \\begin{pmatrix} 1 & 2 \\\\ 3 & 4 \\end{pmatrix}\n",
     "$$\n"
    ]
   },
@@ -839,7 +839,7 @@
     "s = Solver()\n",
     "\n",
     "h0 = Const('h0', HeapSort())  # initial heap\n",
-    "h1 = Const('a1', HeapSort())  # heap after increment\n",
+    "h1 = Const('h1', HeapSort())  # heap after increment\n",
     "x  = Const('x',  AddrSort())  # address of the integer\n",
     "\n",
     "# the initial value of the heap at address x is assumed to be positive\n",
@@ -960,6 +960,8 @@
    "source": [
     "s = Solver()\n",
     "s.from_string(\"\"\"\n",
+    "(set-logic ALIA) ; Theory of arrays (A) and linear integer arithmetic (LIA) \n",
+    "\n",
     "; TODO: YOUR SOLUTION HERE\n",
     "\"\"\")\n",
     "print(s.check())"
