HW3 additional hints

--- a/hw3-smt/SMT.ipynb
+++ b/hw3-smt/SMT.ipynb
@@ -336,7 +336,9 @@
    "source": [
     "**Exercise 2** (0 points, required)\n",
     "\n",
-    "Prove that there is a bound `B` such that every integer `x >= B` can be expressed as a non-negative linear combination of 7 and 8. That is, there are non-negative constants `y` and `z` such that `x = y*7 + z*8` for each `x >= B`. What is the smallest `B` with this property?\n",
+    "Prove that there is a bound `B` such that every integer `x >= B` can be expressed as a non-negative integer linear combination of 7 and 8. That is, there are non-negative integer constants `y` and `z` such that `x = y*7 + z*8` for each `x >= B`. What is the smallest `B` with this property?\n",
+    "\n",
+    "FYI: the generalization of this problem is called the [Frobenius coin problem](https://en.wikipedia.org/wiki/Coin_problem).\n",
     "\n",
     "Suggested steps:\n",
     "* Formulate the problem as a quantified formula on paper first as you would do it in a math class.\n",
